[project]
name = "url-shortener"
version = "0.1.0"
description = "A distributed URL shortener service"
authors = [
    {name = "Antigravity", email = "antigravity@google.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.1",
    "redis>=5.2.0",
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "gunicorn>=23.0.0",
    "greenlet>=3.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
